Fix enabling of delta movement

HOTFIX
BUG: 407562
FIXED-IN:1.8.1